      DNS server with a timeout between messages [LS]
- DC  Fixed pvr_mem_available() to report all available texture memory, not just
      what was available in the pvr_malloc() arena [LS]
- DC  Added a utility function to the PVR code for controlling the cheap shadow
      scale register [LS]
- DC  Added an example of the PVR's cheap shadow functionality [LS]

KallistiOS version 2.0.0 -----------------------------------------------
- DC  Broadband Adapter driver fixes [Dan Potter == DP]
- *** Imported a new version of lwIP, with proper sockets lib [DP]
- DC  Added new httpd example for lwIP [DP]
- x86 Added incomplete ia32 port [DP]
- DC  Added new DC examples for Parallax (raster_melt, sinus, delay_cube,
      rotocube) [DP]
- *** Added svnpush.py script for pushing repositories on the web [DP]
- DC  Added genmenu module and example in Tsunami [Dan Potter == DP]
- DC  Added hello-mp3 example [DP]
- DC  320x240 PAL mode [mekanaizer == MK]
- *** Fixed vqenc and kmgenc headers to be ANSI compliant [DP]
- *** New addons/ports build system [DP]
- *** Moved most addons/ports into their own tree/distribution [DP]
- *** Moved several incorrectly placed pieces into libkosutils [DP]
- *** Imported port of Lua 5.0 [DP]
- DC  Added Tsunami Matrix class [DP]
- DC  Various improvements to Tsunami classes [DP]
- *** Major build system overhaul (see RELNOTES) [DP]
- DC  Improved MII/link status handling for BBA driver [DP]
- *** Added NONE thread mode [DP]
- *** lwIP select fixes [Walter van Niftrik == WvN]
- DC  GDB stub fixes [Richard Moats == RM]
- *** New bin2c [Gil Megidish == GM]
- *** Updated genromfs [DP]
- DC  Fixed and re-enabled SPU DMA module [DP]
- DC  Cleaned up PVR DMA functions, adding support for different DMA targets [DP]
- DC  Floating point register support for the GDB stub [RM]
- DC  Added G2 DMA pausing for G2 bus read/write calls [DP]
- *** Added UDP sendto/recvfrom calls in lwIP [DP]
- DC  Added DNS client lwIP example [DP]